--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -1,22 +1,130 @@
 /* header styling */
 header {
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
   box-sizing: border-box;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
   padding: 100px 50px;
   height: 100vh;
+}
+header h1 {
+  font-size: 6em;
 }
 
 /* end of header styling */
 
 /* main styling */
-#mainArticle {
+#profile {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
+  padding: 0 10%;
+  box-sizing: border-box;
+}
+.textProfile h1 {
+  font-size: 3.5em;
+}
+/* card styling */
+.picProfile {
+  border-radius: 20px;
+  height: 500px;
+  width: 350px;
+  background-image: url("../img/profile.jpg");
+  background-position: center;
+  filter: grayscale(0.5);
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  box-shadow: 5px 8px 18px rgba(0, 0, 0, 0.349);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation: backgroundDown 0.5s;
+}
+.picProfile.active {
+  filter: grayscale(0);
+  background-size: 110%;
+  animation: backgroundUp 0.5s;
+}
+@keyframes backgroundUp {
+  from {
+    filter: grayscale(0.5);
+    background-size: 100%;
+  }
+  to {
+    filter: grayscale(0);
+    background-size: 110%;
+  }
+}
+@keyframes backgroundDown {
+  from {
+    filter: grayscale(0);
+    background-size: 110%;
+  }
+  to {
+    filter: grayscale(0.5);
+    background-size: 100%;
+  }
+}
+.picProfile .subtitle {
+  width: 100%;
+  height: 150px;
+  background-color: rgb(255, 255, 255);
+  transform: translateY(350px);
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 0.8em;
+  color: rgb(112, 112, 112);
+}
+/*love button  */
+.picProfile .love {
+  width: 100px;
+  height: 100px;
+  box-sizing: border-box;
+  background-color: rgb(255, 255, 255);
+  transform: translateY(150px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  box-shadow: 0px 2px 8px #00000021;
+}
+.love img {
+  width: 50%;
+  opacity: 0.2;
+  filter: grayscale(1);
+  cursor: pointer;
+}
+.love img.active {
+  filter: grayscale(0);
+  opacity: 1;
+  transition: all 0.3s;
+}
+/* end of love button */
+/* end of card styling */
+section {
   box-sizing: border-box;
   padding: 50px 10%;
+}
+main section:nth-child(even) {
+  background-color: black;
+  color: #ffff;
 }
 /* end of main styling */
 
 /* responsive breakoint */
-@media screen and (max-width);
+@media screen and (max-width: 786px) {
+  #profile {
+    flex-direction: column-reverse;
+  }
+  .picProfile {
+    height: 450px;
+    width: 325px;
+  }
+}
