--- a/style/styleNav.css
+++ b/style/styleNav.css
@@ -1,19 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+  /* border: solid 0.5px rgba(255, 0, 0, 0.808); */
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   position: relative;
+  color: hsl(0, 0%, 7%);
 }
 
 /* navbar styling */
 nav {
   width: 100%;
   display: flex;
-  background-color: rgba(146, 160, 24, 0.39);
   justify-content: space-around;
   /* padding: 20px 0; */
   height: 100px;
@@ -21,8 +22,9 @@ nav {
   color: aliceblue;
   position: sticky;
   transform: translateY(-100px);
+  transition: all 0.5s;
+  z-index: 1;
 }
-
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
 .sticky {
   position: fixed;
@@ -45,14 +47,20 @@ nav.sticky .logo {
 nav ul {
   display: flex;
   list-style: none;
-  width: 40%;
+  width: 60%;
   justify-content: space-between;
+  font-size: 1.2em;
 }
-
+nav.sticky ul {
+  width: 40%;
+  font-size: 0.8em;
+}
 nav ul li a {
   text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+nav.sticky ul li a {
   color: aliceblue;
-  font-size: 0.8em;
 }
 
 nav ul li a:hover {
@@ -112,7 +120,7 @@ nav ul li a:hover {
 @media screen and (max-width: 786px) {
   nav ul {
     width: 80%;
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
 
   nav.sticky ul {
