--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -1,6 +1,24 @@
+:root {
+  --dark-black: #010101;
+  --dark-green: #0f5424;
+  --medium-gren: #138c38;
+  --light-green: #739e86;
+  --gray-black: #707372;
+  --gray-light: #b8c6bf;
+  --white-gray: #e8e9e8;
+
+  --header-gradient: linear-gradient(
+    0deg,
+    rgba(15, 84, 36, 1) 0%,
+    rgba(16, 95, 40, 1) 69%,
+    rgb(8, 104, 37) 100%
+  );
+
+  --shadow-min: 2px 4px 8px #01010136;
+}
 /* header styling */
 header {
-  background-color: rgb(255, 255, 255);
+  background: var(--header-gradient);
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -8,6 +26,7 @@ header {
   text-align: center;
   padding: 100px 50px;
   height: 100vh;
+  color: var(--white-gray);
 }
 header h1 {
   font-size: 6em;
@@ -17,62 +36,69 @@ header h1 {
 
 /* main styling */
 #profile {
+  background: var(--dark-green);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  height: 140vh;
   padding: 0 10%;
   box-sizing: border-box;
+  color: var(--white-gray);
+  line-height: 3em;
 }
 .textProfile h1 {
   font-size: 3.5em;
 }
+.textProfile::before {
+  content: "PROFILE";
+  font-size: 10em;
+  left: 8%;
+  transform: translateY(-50px);
+  color: rgba(0, 0, 0, 0);
+  -webkit-text-stroke: 2px rgba(255, 255, 255, 0.103);
+  position: absolute;
+}
+
 /* card styling */
 .picProfile {
   border-radius: 20px;
   height: 500px;
   width: 350px;
-  background-image: url("../img/profile.jpg");
+  background-image: url("../img/aldin-profile.png");
   background-position: center;
-  filter: grayscale(0.5);
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
-  box-shadow: 5px 8px 18px rgba(0, 0, 0, 0.349);
+  box-shadow: var(--shadow-min);
   display: flex;
   flex-direction: column;
   align-items: center;
   animation: backgroundDown 0.5s;
 }
 .picProfile.active {
-  filter: grayscale(0);
   background-size: 110%;
   animation: backgroundUp 0.5s;
 }
 @keyframes backgroundUp {
   from {
-    filter: grayscale(0.5);
     background-size: 100%;
   }
   to {
-    filter: grayscale(0);
     background-size: 110%;
   }
 }
 @keyframes backgroundDown {
   from {
-    filter: grayscale(0);
     background-size: 110%;
   }
   to {
-    filter: grayscale(0.5);
     background-size: 100%;
   }
 }
 .picProfile .subtitle {
   width: 100%;
   height: 150px;
-  background-color: rgb(255, 255, 255);
+  background: var(--white-gray);
   transform: translateY(350px);
   box-sizing: border-box;
   display: flex;
@@ -87,13 +113,13 @@ header h1 {
   width: 100px;
   height: 100px;
   box-sizing: border-box;
-  background-color: rgb(255, 255, 255);
+  background: var(--white-gray);
   transform: translateY(150px);
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50px;
-  box-shadow: 0px 2px 8px #00000021;
+  box-shadow: var(--shadow-min);
 }
 .love img {
   width: 50%;
@@ -112,15 +138,73 @@ section {
   box-sizing: border-box;
   padding: 50px 10%;
 }
-main section:nth-child(even) {
-  background-color: black;
-  color: #ffff;
+main section:nth-child(odd) {
+  background-color: var(--dark-green);
+  color: var(--white-gray);
 }
+main section:nth-child(even) {
+  background-color: var(--white-gray);
+  color: var(--gray-black);
+}
+/* product styling */
+#product {
+  padding: 30px 5%;
+  height: 300px;
+  display: grid;
+  grid-template-rows: 3.5em 75px 50px ;
+  justify-content: center;
+  text-align: center;
+  grid-row-gap: 25px;
+}
+#product h1{
+  font-size: 3em;
+}
+#product .iconApp{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 80vw;
+  position: relative;
+}
+#product .iconApp img{
+  width: 150%;
+}
+#product::before{
+  content: "TOOLS";
+  font-size: 10em;
+  position: absolute;
+  color: rgba(0, 0, 0, 0);
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.082);
+  right: 50px;
+  transform: translateY(100px);
+}
+#product .iconSocial{
+  width: 20%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.iconSocial a{
+  color: var(--gray-black);
+  cursor: pointer;
+}
+.iconSocial a:hover{
+  color: var(--medium-gren);
+}
+
+/* end of product styling */
+/* galery styling */
+#galery {
+  height: 500px;
+}
+/* end of galery styling */
 /* end of main styling */
 
 /* responsive breakoint */
 @media screen and (max-width: 786px) {
-  #profile {
+  #profile {grid;
+    grid-row: 1/2;
     flex-direction: column-reverse;
   }
   .picProfile {
