fix the marquee and add about section

--- a/src/style/input.css
+++ b/src/style/input.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Vidaloka&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;600;700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
